# Statista

./: .gitignore  README.md  advanced_search.py  app_layout.py  denonyms.py  gui.py  merge_sheets.py  metrics.py  page_source.html  pyproject.toml  scraper.py  smazat.py  transform.py
.github/workflows/: main.yml
assets/: style.css
scripts/: digital_lifestyle.csv  get_topic_overview.py  output.json  questionnaire_germany.json  topic_coverage.json  topic_suggestion_for_clone.py
statista_data/animation-industry-in-france/: animation-industry-in-france_sections.txt
statista_data/honduras/: honduras_sections.txt
