[tool.poetry]
name = "statista"
version = "0.1.0"
description = ""
authors = ["survivecz <poucpetr11@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.2"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
dash-bootstrap-components = "^1.6.0"
tqdm = "^4.67.1"
chromedriver-autoinstaller = "^0.6.4"
logging = "^0.4.9.6"
black = "^24.10.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
dash-daq = "^0.5.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
