[tool.poetry]
name = "statista"
version = "0.1.0"
description = ""
authors = ["survivecz <poucpetr11@seznam.cz>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4"
dash = ">=2.18.2,<3.0.0"
selenium = ">=4.27.1,<5.0.0"
beautifulsoup4 = ">=4.12.3,<5.0.0"
requests = ">=2.32.3,<3.0.0"
dash-bootstrap-components = ">=1.6.0,<2.0.0"
tqdm = ">=4.67.1,<5.0.0"
chromedriver-autoinstaller = ">=0.6.4,<1.0.0"
logging = ">=0.4.9.6,<1.0.0"
black = ">=24.10.0,<25.0.0"
openpyxl = ">=3.1.5,<4.0.0"
pandas = ">=2.2.3,<3.0.0"
dash-daq = ">=0.5.0,<1.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
scikit-learn = ">=1.6.0,<2.0.0"
rapidfuzz = ">=3.11.0,<4.0.0"
nltk = ">=3.9.1,<4.0.0"
sentence-transformers = ">=3.3.1,<4.0.0"
flask = ">=1.0.4,<3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
